# is_even

./: LICENSE  README.md  main.py  pyproject.toml
src/: bit_manipulation.py  calculator.py  evenness_IO.py
src/is_even/: bit_manipulation.py  calculator.py
tests/: test_is_even.py
