[project]
name = "is_even"
version = "0.1.0"
description = "A complicated even number checker"
requires-python = ">=3.11"

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100